--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/lib/resource/resource.ontology.fua.git"
+    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/resource/ontology.fua.git"
   },
   "author": "spetrac@nicos-ag.com",
   "license": "UNLICENSED"
