--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
       "require": "./src/load.core.js"
     }
   },
+  "files": [
+    "src/*",
+    "data/*"
+  ],
   "devDependencies": {
     "mocha": "^8.2.1",
     "expect": "^26.6.2",
